Update browser manifest to require ProcessControl from gpu service

This adds a 'required' entry to the exe:content_browser manifest
for content::mojom::ProcessControl in exe:content_gpu, allowing
the browser to connect to the ProcessControl interface in the GPU
process.

Also fixes a bug in InterfaceRegistry which was causing useful
log errors to be omitted when capability filters would block
interface connection and registration.

BUG=624112
TBR=ben@chromium.org

Review-Url: https://codereview.chromium.org/2102353002
Cr-Commit-Position: refs/heads/master@{#402665}

Former-commit-id: 6e5a7d11be2186aa51d20c4ab2ba51e2690fa27d