services/shell/public/cpp/lib/interface_registry.cc
@@ -44,7 +44,7 @@ void InterfaceRegistry::GetInterface(const mojo::String& interface_name,
   auto iter = name_to_binder_.find(interface_name);
   if (iter != name_to_binder_.end()) {
     iter->second->BindInterface(connection_, interface_name, std::move(handle));
-  } else if (connection_ && connection_->AllowsInterface(interface_name)) {
+  } else if (connection_ && !connection_->AllowsInterface(interface_name)) {
     LOG(ERROR) << "Connection CapabilityFilter prevented binding to "
                << "interface: " << interface_name << " connection_name:"
                << connection_->GetConnectionName() << " remote_name:"
